# ChangeLog for media-sound/zynaddsubfx
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  20 Feb 2013; Kalle Lindén <kalle@gentoo.org>
  +files/zynaddsubfx-2.4.3-docs.patch, +files/zynaddsubfx-2.4.3-nofltk.patch:
  Add missing patches (from ladi-overlay)

  02 Feb 2013; Dominique Michel <dominique_libre@sourceforge.net>
  zynaddsubfx-99999988: add -j1 to emake (doesn't compile otherwise);
  fixed the compilation of the external programs to use emake;
  added our compiler and CFLAGS to external programs

  28 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
  zynaddsubfx-2.2.1-r8.ebuild, zynaddsubfx-2.4.0.ebuild,
  +zynaddsubfx-2.4.3.ebuild, zynaddsubfx-20070707.ebuild,
  zynaddsubfx-20070707-r1.ebuild, zynaddsubfx-99999999.ebuild, metadata.xml:
  import zynaddsubfx-2.4.3 from ladi overlay (with some improvements)
  removed herd from metadata.xml
  minor cleanup
  made repoman less unhappy

  13 Dec 2012; Karl Lindén (lilrc) <lilrc@users.sourceforge.net>
  zynadsubbfx-2.2.1-r8.ebuild, zynadsubbfx-2.4.0.ebuild,
  zynadsubbfx-20070707.ebuild, zynaddsubfx-20070707-r1.ebuild
  zynadsubbfx-99999999.ebuild
  replaced dependency on media-sound/lash with virtual/liblash
  updated copyright notice

  24 May 2011: Dominique Michel <dominique@tuxfamily.org>
  * version 9999... removed patch that doesn't apply anymore
  * added portage patch for build with fltk-1.3

  13 Jan 2010; Marc-Olivier Barre <marco@marcochapeau.org>
  * Fixed jack dependency on jack-audio-connection-kit for version 20070707
  * Removed the une of unipatch from version 20070707-r1 which doesn't even work anymore
  We'll have to find another way to apply those patches...

  06 Aug 2009; Frieder Buerzele <evermind@tuxfamily.org>
  +zynaddsubfx-2.4.0.ebuild: bumped

  15 Sep 2008; Frieder Buerzele <evermind@tuxfamily.org>
  zynaddsubfx-99999999.ebuild:
  fix wrong function-signature

  13 Sep 2008; Frieder Buerzele <evermind@tuxfamily.org>