@@ -21,6 +21,7 @@ EBUILD zynaddsubfx-2.4.0.ebuild 2733 SHA256 1db058464596dc84a60ca88997ecd6489df6
 EBUILD zynaddsubfx-2.4.3.ebuild 1585 SHA256 9773e2ffd8d4373399d59ac748925b5f483f66dbc21712513c7129264a275d49 SHA512 0e19c3a50bdc6b4a684f74788f207b49a0bdb363d1b774c8d4c42c4e37252b30eba58c020addcd98baccacf9f7657812e7ab626c98289f7157c2a1caaeb6b1b1 WHIRLPOOL 58c2cfe80d2c94b7872d7051e20e6726365eeb4f0003e486528463989ac426fc5ac8c6ef36b407bfb89a0e5d82e3b5e26148a39f6dd804dea1f4aa0ae47cf92f
 EBUILD zynaddsubfx-20070707-r1.ebuild 3094 SHA256 feaa56afa960ec2d51fb0e62629e98ce202646a4afee04dd4ec18a27e46e23e2 SHA512 9a4de8f8fddc497f0396ad43a85ef4b3d2c1a3aea68d903d045edf98999abd0fec06ce020a9120ab24907767b202f23cc5700d5f2c43e47d24f167b358fec620 WHIRLPOOL b507af8cf295e4e351eb7bb74d8e4ae5b83bbc4669c187e6b305522c56b5546ba641c251663c96f89999e0dc259bc9277a409002d9d0665c784b3384ba706d34
 EBUILD zynaddsubfx-20070707.ebuild 3018 SHA256 ed9aae5e87f2fc3b0c796647331b214f7058e1368196fe976d81b5977250fd1c SHA512 f56b55ace1360c8b21bd6e97441b057a8c3a32a12a42a2bf5b0593fcfa4cac05d9c4336aff4757b48ef0710cf8677d5f0b8116711bbfd6c196ecaa6e10b39348 WHIRLPOOL b366f5ba35a95231cb96032c26702c09619a874f177e852224eb216055e1cd73793b622fa75fda7ed2be2c4c9ec4297f2b2e778472beeb9ac31127a8396a36a4
+EBUILD zynaddsubfx-99999999-r1.ebuild 2892 SHA256 30798474527cedb82496ef3816bfdeb4f81fc29badbef9ffe1f7149881a53d46 SHA512 430fbb472b24972b0dcfddc7cb4bc4410925fb4ee48b366120270461b22cc119da8a1e35e9ce19f46614e793f938b8996966c0339f3d9720c7a0175ea484c7cc WHIRLPOOL 807047c25dedc0e3feb7d9410152f8e25c4cb23c2b6ad9af28701ae3e218b0e3a61b1e0d7f9827c92b07273c16923e8d2160f4252707fb5d30d89c89f2cc2e9a
 EBUILD zynaddsubfx-99999999.ebuild 3567 SHA256 4dbb9ed6c0effdf6af0411ff6d12b0b91f4174df99d1686d69c75386ee2a2b61 SHA512 7a649238734c847d774e480be4751170ef3c205f84ae555fd6c8b7ecf61d668359264f3f3b15c497b110f1e83ac53cad8d7b4a73181a3d6e2ab862d8e815a195 WHIRLPOOL 509d9cbfeada744c5ff427e689890af03fdcbeff3fb2c8f691ddebd17b02c400f2238764069f10ab1d4940b712e508b9fdd6c3bd689a8a039da5e5ad86989763
-MISC ChangeLog 2269 SHA256 33ff431d1974229b74431d0985c482e12c6609ab4833f4ffdd8a41c828ce813e SHA512 f7d0ed843bd2b3013ddda235101231039691d44381dfe9c6400e3567c0b0d32b5986ff1f881d55e521fdef67117c6ed7467c079539c23c89a95b8132377c76a1 WHIRLPOOL 74a516e31d7f2d7fff37eb968016440d3af4c10724f0028f0aee2834b3949fd7c4693d2a488c310fe1ef3c0d3bca6634412cd1921892cdf1ffed57254fdef08c
+MISC ChangeLog 2504 SHA256 887c580abcd7fcc947afc03c0cd360ce8408cf8f52df102ca353a41ae0adf709 SHA512 00b7f72bb8dc7c6939d88d1bec58f3ccb176ca5867b5c499f64259a234024dd47ecdbef7f343ca98dc528a7930626eabb14cf3ee86051d5a5b32a67df5ab9722 WHIRLPOOL ab77c67a317e555661f0b25b96d96456d2b61c5ec662eea633edbfc2df5ca550545b3a56ca652f3bdc7b8ff6beccbc0cedd03626dc5009d1c669446a9d48381b
 MISC metadata.xml 246 SHA256 f32f31abe9dcc1f9a5dc9b6a36996d773abd006d92c13c4df48f8d7d1061060f SHA512 327022589c637a14219eb603a62050fbb93b980f4693960c0ac4117b6b483d9f0d9fe1366d8e18227b34373a399aef339f49c16df8ca57b9ec870568a4d394f4 WHIRLPOOL e55381a9a9fd1d0efbe87da1c3aa302efdcf4734827f56273faeb55b17361c529518fcf16ac0946102e26165e8eedba81ab0cd07c7b08ce6bad001e944e43a0f
