@@ -2,6 +2,11 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2014; Dominique Michel <dominique_libre@users.sourceforge.net>
+  +zynaddsubfx-99999999-r1.ebuild:
+  Experimental ebuild for the git version. Need some work on the configure
+  phase, provide the banks and additional examples.
+
   20 Feb 2013; Kalle Lindén <kalle@gentoo.org>
   +files/zynaddsubfx-2.4.3-docs.patch, +files/zynaddsubfx-2.4.3-nofltk.patch:
   Add missing patches (from ladi-overlay)
